[project]
name = "flet-geolocator-example"
version = "1.0.0"
description = "flet-geolocator-example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "flet-geolocator",
    "flet",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-geolocator-example"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"
